welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:4: error: '=>' expected but '{' found.
	case "A"{
                ^